# ProyectoIOperativos

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Client  Client.c  Client.h  Constants.h  Creator  Creator.c  Creator.h  Makefile  Reconstructor  Reconstructor.c  Reconstructor.h  Statistics  Statistics.c  Statistics.h  cmake_install.cmake  copy.txt  install_manifest.txt  makefile  test.txt
Files/: quijote1.txt  quijote111.txt  quijote2.txt  quijote2112.txt  quijote3.txt  quijote9.txt  quijotecop.txt  quijotex.txt
Libs/libFort/libfort-0.4.2/: Makefile  cmake_install.cmake  libfort-targets.cmake
Libs/libFort/libfort-0.4.2/lib/: Makefile  cmake_install.cmake  libfort.pc
make/: makefile
